--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <section class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <section>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,8 +22,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </section>
-    </section>
+        </nav>
+    </header>
     <section class="hero"></section>
     <section class="content">
         <section class="search-engine-optimization">
